/*
 * Copyright (c) 2024. Departamento de Ingenieria de Sistemas y Computacion
 */

package cl.ucn.disc.poo.restaurante.model;

/**
 * The TipoBebida.
 *
 * @author Programacion Orientada al Objeto.
 */
public enum TipoBebida {
  AGUA,
  JUGO,
  CERVEZA,
  VINO
}
