/*
 * Copyright (c) 2024. Departamento de Ingenieria de Sistemas y Computacion
 */

package cl.ucn.disc.poo.restaurante.model;

/**
 * The Tipo Plato.
 *
 * @author Programacion Orientada al Objeto.
 */
public enum TipoPlato {
  ENTRADA,
  FONDO,
  POSTRE
}
